# jsic-scraper

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
src/estat_master/processor/: utils.py
tests/: __init__.py  conftest.py
tests/unittests/: __init__.py
tests/unittests/cli/: __init__.py
tests/unittests/etl/: __init__.py
tests/unittests/extractor/: __init__.py  test_example_extractor.py  test_master_downloader.py
tests/unittests/processor/: __init__.py  test_jsic.py  test_utils.py
