[project]
name = "estat-master"
version = "0.1.0"
description = "e-Stat master data tool for Japanese government classification data (JSIC, JSOC, etc.)"
requires-python = ">=3.13"
license = {text = "MIT"}
dependencies = [
    "pandas>=1.5.0",
    "requests>=2.28.1",
    "beautifulsoup4>=4.11.1",
    "lxml>=4.9.1",
    "pandera>=0.26.1",
    "click>=8.3.1",
]

[project.scripts]
estat-master = "estat_master.cli.cli:run_etl"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/estat_master"]

[dependency-groups]
dev = [
    "ruff>=0.13.2",
    "mypy>=1.9.0,<2.0.0",
    "pytest>=8.1.1,<9.0.0",
    "pre-commit>=4.1.0,<5.0.0",
    "python-dotenv>=1.0.1,<2.0.0",
]

[tool.mypy]
check_untyped_defs = true
ignore_errors = false
strict_optional = true
warn_unused_configs = true
warn_unused_ignores = true
warn_redundant_casts = true
ignore_missing_imports = true

[tool.ruff]
target-version = "py313"
line-length = 120
lint.select = ["ALL"]
lint.ignore = [
    # missing-trailing-comma
    "COM812",
    # ambiguous-variable-name
    "E741",
    #  single-line-implicit-string-concatenation
    "ISC001",
    # assert
    "S101",
    # suspicious-non-cryptographic-random-usage
    "S311",
    # unnecessary-assign
    "RET504",
    # magic-value-comparison
    "PLR2004",
    # pydocstyle
    "D",
    # flake8-annotations
    "ANN",
]
exclude = [
    ".git",
    ".github",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    "__pycache__",
]

[tool.ruff.lint.mccabe]
max-complexity = 5

[tool.pytest.ini_options]
minversion = "6.2.5"
addopts = "-ra -q"
pythonpath = "."
testpaths = ["tests"]
